# cxx-qt-module-repro

./: Cargo.toml  README  build.rs
crates/qmlmod/: Cargo.toml  build.rs
crates/qmlmod/src/: lib.rs
qml/: main.qml
src/: main.rs
