[workspace]
members = [
  ".",
  "crates/qmlmod",
]


[package]
name = "cxx-qt-module-repro"
version = "0.1.0"
authors = []
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
qmlmod = { path = "crates/qmlmod" }

cxx.workspace = true
cxx-qt.workspace = true
cxx-qt-lib = { workspace = true, features = ["full"] }

[build-dependencies]
cxx-qt-build = { workspace = true }

[workspace.dependencies]
cxx = "1.0.94"
cxx-qt = { version = "0.7"}
cxx-qt-lib = { version = "0.7"}
cxx-qt-lib-extras = { version = "0.7"}
cxx-qt-build = { version = "0.7"}
qt-build-utils = { version = "0.7"}