[workspace]
members = [
  ".",
  "crates/qmlmod",
]


[package]
name = "cxx-qt-module-repro"
version = "0.1.0"
authors = []
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
qmlmod = { path = "crates/qmlmod" }

cxx.workspace = true
cxx-qt.workspace = true
cxx-qt-lib = { workspace = true, features = ["full"] }

[build-dependencies]
cxx-qt-build = { workspace = true }

[workspace.dependencies]
cxx = "1.0.94"
cxx-qt = { git="https://github.com/LeonMatthesKDAB/cxx-qt/", rev="7952f55c1529df8d8a67b2278ea12d67f885412d" }
cxx-qt-lib = { git="https://github.com/LeonMatthesKDAB/cxx-qt/", rev="7952f55c1529df8d8a67b2278ea12d67f885412d" }
cxx-qt-lib-extras = { git="https://github.com/LeonMatthesKDAB/cxx-qt/", rev="7952f55c1529df8d8a67b2278ea12d67f885412d" }
cxx-qt-build = { git="https://github.com/LeonMatthesKDAB/cxx-qt/", rev="7952f55c1529df8d8a67b2278ea12d67f885412d" }
qt-build-utils = { git="https://github.com/LeonMatthesKDAB/cxx-qt/", rev="7952f55c1529df8d8a67b2278ea12d67f885412d" }
