[package]
name = "qmlmod"
version = "0.1.0"
edition = "2021"
links = "qmlmod"

[dependencies]
cxx = { workspace = true }
cxx-qt = { workspace = true }
cxx-qt-lib = { workspace = true, features = ["qt_full"] }


[build-dependencies]
cxx-qt-build = { workspace = true }
qt-build-utils = { workspace = true }
